# Live2d-AIchat

./: .gitignore  README.en.md  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  ENVIRONMENT.md  README.md  __run_eval_capture.py  __run_eval_variant.py  environment.ai-chat-gpu.yml  environment.container.yml  pytest.ini  requirements.asr.txt  requirements.ci.txt  requirements.container.txt  requirements.knowledge.txt  requirements.runtime.txt  requirements.tts.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/evals/: phase2_rag_eval.50.jsonl  phase2_rag_eval.sample.jsonl
backend/scripts/: evaluate_rag.py  import_knowledge.py  summarize_eval_logs.py
backend/tests/: conftest.py  test_admin_api.py  test_asr.py  test_avatar_config.py  test_avatar_trace.py  test_chat_streaming.py  test_conversation_state.py  test_dashboard_api.py  test_emotion.py  test_evaluate_rag.py  test_rag.py  test_recommendations_api.py  test_reports_api.py  test_sessions_api.py  test_tts.py  test_vision_api.py
backend/vllm_cosyvoice_plugin/: ai_chat_cosyvoice_vllm_plugin.py  pyproject.toml
deploy/: backend.env.example  backend.env.v100.example  docker-compose.yml  postgres.env.example
deploy/docker/: bootstrap.sh  common.sh  down.sh  logs.sh  up.sh
docs/: api-design.md  architecture.md  gpu-upgrade.md  knowledge-base.md  lipsync.md  overall-design.md  roadmap.md  tech-stack.md
frontend/: .env.example  Dockerfile  README.md  admin.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
(+160 files in other folders)
