[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chat-cosyvoice-vllm-plugin"
version = "0.1.0"
description = "Registers CosyVoice2 as a vLLM general plugin for AI Chat Live2D."
requires-python = ">=3.10"

[project.entry-points."vllm.general_plugins"]
ai_chat_cosyvoice = "ai_chat_cosyvoice_vllm_plugin:register"

[tool.setuptools]
py-modules = ["ai_chat_cosyvoice_vllm_plugin"]
